<resources>
    <string name="app_name">Akali</string>
    <string name="to_app_settings">App settings</string>
    <string name="imei_label">IMEI:</string>
    <string name="version_label">Version:</string>
    <string name="imei_dialog_title">\?</string>
    <string name="imei_dialog_message">This permission need to display IMEI</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="profile_menu_item_title">Profile</string>
    <string name="reader_menu_item_title">Reader</string>
    <string name="quests_menu_item_title">Quests</string>
    <string name="about_menu_item_title">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="profile_name">Ilya Demidovich</string>
    <string name="edit_profile_button">Edit</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_nickname_hint">Nickname</string>
    <string name="profile_phone_hint">+00000000</string>
    <string name="profile_email_hint">example@gmail.com</string>
    <string name="auth_email_hint">example@gmail.com</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_create_account">Don\'t have account ? Create here.</string>
    <string name="create_account_button">Create</string>
    <string name="logout_menu_item_title">Logout</string>
    <string name="save_profile_button">Save</string>
    <string name="settings_menu_item_title">Settings</string>

    <string name="rss_category_title">RSS</string>
    <string name="rss_key">rss_link</string>
    <string name="rss_title">RSS Link</string>
    <string name="rss_summary">RSS Link</string>
    <string name="rss_menu_item_title">RSS</string>
</resources>
