<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:hint="@string/profile_name_hint"
            android:inputType="text"
            android:id="@+id/profile_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/profile_nickname_hint"
            android:inputType="text"
            android:id="@+id/profile_nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/profile_phone_hint"
            android:inputType="phone"
            android:id="@+id/profile_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/profile_email_hint"
            android:inputType="textEmailAddress"
            android:id="@+id/profile_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>